docs/4.21/security/external_secrets_operator/external-secrets-log-levels.md
You can customize the behavior of the External Secrets Operator for Red Hat OpenShift operand components by configuring custom annotations, deployment lifecycle settings, and environment variables through the `ExternalSecretsConfig` custom resource (CR).

These configurations provide administrators with fine-grained control over the external-secrets deployment.

You can customize the External Secrets Operator for Red Hat OpenShift operand by using the `ExternalSecretsConfig` custom resource (CR). The CR supports a set of deployment and runtime options, such as custom annotations, revision history limits, environment variables, resource limits, tolerations, and proxy settings—so you can control how the operand is deployed and run without editing the operand resources directly.

All supported options are defined in the `ExternalSecretsConfig` CR (for example under the `spec.controllerConfig` for controller-related settings). The Operator reconciles the operand from this CR. Changes made directly to operand resources are overwritten. Use the `ExternalSecretsConfig` CR as the only supported way to customize the operand.

For the complete list of fields and allowed values, see the `ExternalSecretsConfig` API reference in the External Secrets Operator for Red Hat OpenShift documentation.

- [External Secrets Operator for Red Hat OpenShift APIs](../external_secrets_operator/external-secrets-operator-api.xml#external-secrets-operator-api)

# Setting a log level for the External Secrets Operator for Red Hat OpenShift

Set the log level for the External Secrets Operator for Red Hat OpenShift to control the detail of log messages. By adjusting the verbosity, you can troubleshoot issues effectively and manage the volume of log data.

- You have access to the cluster with `cluster-admin` privileges.

- You have created the `ExternalSecretsConfig` custom resource.

<!-- -->

- Update the subscription object for the External Secrets Operator for Red Hat OpenShift to provide the verbosity level for the operator logs by running the following command:

  ``` terminal
  $ oc -n <external_secrets_operator_namespace> patch subscription openshift-external-secrets-operator --type='merge' -p '{"spec":{"config":{"env":[{"name":"OPERATOR_LOG_LEVEL","value":"<log_level>"}]}}}'
  ```

  where:

  external_secrets_operator_namespace
  Specifies the namespace where the Operator is installed.

  log_level
  Specifies the level of log detail. Values range from 1-5. The default is 2.

1.  The External Secrets Operator pod is redeployed. Verify that the log level of the External Secrets Operator for Red Hat OpenShift is updated by running the following command:

    ``` terminal
    $ oc set env deploy/external-secrets-operator-controller-manager -n external-secrets-operator --list | grep -e OPERATOR_LOG_LEVEL -e container
    ```

    The following example verifies that the log level of the External Secrets Operator for Red Hat OpenShift is updated.

    ``` terminal
    # deployments/external-secrets-operator-controller-manager, container manager
    OPERATOR_LOG_LEVEL=2
    ```

2.  Verify that the log level of the External Secrets Operator for Red Hat OpenShift is updated by running the `oc logs` command:

    ``` terminal
    $ oc logs -n external-secrets-operator -f deployments/external-secrets-operator-controller-manager -c manager
    ```

# Setting a log level for the External Secrets Operator for Red Hat OpenShift operand

Set the log level for the External Secrets Operator for Red Hat OpenShift operand to control the verbosity of log messages. By doing this task, you can adjust the amount of detail recorded for troubleshooting or monitoring purposes.

- You have access to the cluster with `cluster-admin` privileges.

- You have created the `ExternalSecretsConfig` custom resource.

1.  Edit the `ExternalSecretsConfig` CR by running the following command:

    ``` terminal
    $ oc edit externalsecretsconfigs.operator.openshift.io cluster
    ```

2.  Set the log level value by editing the `spec.appConfig.logLevel` section:

    ``` yaml
    apiVersion: operator.openshift.io/v1alpha1
    kind: ExternalSecretsConfig
    ...
    spec:
      appConfig:
        logLevel: <log_level>
    ```

    - Supports the value range of 1-5. The log level gets mapped to the following operand support levels:

      - 1 - warnings

      - 2 - error logs

      - 3 - info logs

      - 4 and 5 - debug logs

3.  Save your changes and exit the editor.

# Configuring cert-manager for the external-secrets certificate requirements

Configure cert-manager to handle certificate management for the external-secrets webhook and plugins. This optional configuration automates certificate generation for plugins and eliminates the need for manual configuration.

When `cert-manager` is not used, `external-secrets` defaults to its own certificate management. In this mode, it automatically generates the required certificates for the webhook, while you are responsible for manually configuring certificates for the plugins.

- You have access to the cluster with `cluster-admin` privileges.

- You have created the `ExternalSecretsConfig` custom resource.

- You have installed the cert-manager Operator for Red Hat OpenShift. For more information, see "Installing the cert-manager Operator for Red Hat OpenShift"

1.  Edit the `ExternalSecretsConfig` custom resource by running the following command:

    ``` terminal
    $  oc edit externalsecretsconfigs.operator.openshift.io cluster
    ```

2.  Configure `cert-manager` by editing the `spec.controllerConfig.certProvider.certManager` section as follows:

    ``` yaml
    apiVersion: operator.openshift.io/v1alpha1
    kind: ExternalSecretsConfig
    ...
    spec:
      controllerConfig:
        certProvider:
          certManager:
            injectAnnotations: "true"
            issuerRef:
              name: <issuer_name>
              kind: <issuer_kind>
              group: <issuer_group>
            mode: Enabled
    ```

    where:

    injectAnnotation
    Must be set to `true` when enabled.

    name
    Specifies the name of the issuer object referenced in `ExternalSecretsConfig`.

    kind
    Specifies the API issuer. Can be set to either `Issuer` or `ClusterIssuer`.

    group
    Specifies the API issuer group. The group name must be `cert-manager.io`.

    mode
    Must be set to `Enabled`. This is an immutable field and cannot be modified once it is configured.

3.  Save your changes.

4.  After you update the `cert-manager` configurations in the `externalsecretsconfig.operator.openshift.io` object, you must manually delete `external-secrets-cert-controller` deployment by running the following command. This prevents performance degradation of the `external-secrets` application.

    ``` terminal
    $ oc delete deployments.apps external-secrets-cert-controller -n external-secrets
    ```

5.  Optionally, you can delete other resources created for the `cert-controller` by running the following commands:

    ``` terminal
    $ oc delete clusterrolebindings.rbac.authorization.k8s.io external-secrets-cert-controller
    ```

    ``` terminal
    $ oc delete clusterroles.rbac.authorization.k8s.io external-secrets-cert-controller
    ```

    ``` terminal
    $ oc delete serviceaccounts external-secrets-cert-controller -n external-secrets
    ```

    ``` terminal
    $ oc delete secrets external-secrets-webhook -n external-secrets
    ```

- [cert-manager Operator for Red Hat Openshift](../cert_manager_operator/index.xml#cert-manager-operator-about)

- [Installing the cert-manager-Operator for Red Hat Openshift](../cert_manager_operator/cert-manager-operator-install.xml#cert-manager-operator-install)

# Configuring the bitwardenSecretManagerProvider plugin

Configure the `bitwardenSecretManagerProvider` plugin to use Bitwarden Secrets Manager as a source for your secrets. By using this integration, you can sync external secrets to your OpenShift Container Platform cluster.

- You have access to the cluster with `cluster-admin` privileges.

- You have created the `ExternalSecretsConfig` custom resource.

1.  Edit the `ExternalSecretsConfig` custom resource by running the following command:

    ``` terminal
    $  oc edit externalsecretsconfigs.operator.openshift.io cluster
    ```

2.  Edit the `spec.plugins.bitwardenSecretManagerProvider` section as follows to enable the Bitwarden Secrets Manager:

    ``` yaml
    apiVersion: operator.openshift.io/v1alpha1
    kind: ExternalSecretsConfig
    ...
    spec:
      plugins:
        bitwardenSecretManagerProvider:
          mode: Enabled
          secretRef:
            name: <secret_object_name>
    ```

    where:

    name
    The name of the secret containing the certificate key pair for the plugin. The key name in the secret for the certificate must be `tls.crt`. The key name for the private key must be `tls.key`. The key name for the Certificate Authority (CA) certificate key name must be `ca.crt`. Configuring the secret is optional when the cert-manager certificate provider is configured.

3.  Save your changes and exit the editor.

4.  If you disable the plugin the following resources must be deleted manually by running the following commands:

``` terminal
$ oc delete deployments.apps bitwarden-sdk-server -n external-secrets
```

``` terminal
$ oc delete certificates.cert-manager.io bitwarden-tls-certs -n external-secrets
```

``` terminal
$ oc delete service bitwarden-sdk-server -n external-secrets
```

``` terminal
$ oc delete serviceaccounts bitwarden-sdk-server -n external-secrets
```

# Adding custom annotations to external-secrets resources

To customize your resources, you can define up to 20 custom annotations in the custom resource (CR). The Operator merges the annotations with the defaults, prioritizes them, and safely preserves annotations set by external systems.

When an annotation is removed from the CR, the Operator automatically removes it from all managed resources during the next reconciliation. Annotations set by external sources, such as Kubernetes system annotations or annotations added by other controllers, are preserved and are not affected by the Operator.

Annotation keys containing the following reserved domain prefixes are not allowed and are rejected by validation if applied:

- `kubernetes.io/` (including subdomains such as `*.kubernetes.io/`)

- `k8s.io/` (including subdomains such as `*.k8s.io/`)

- `openshift.io/` (including subdomains such as `*.openshift.io/`)

- `cert-manager.io/`

<!-- -->

- You have access to the cluster with `cluster-admin` privileges.

- You have created the `ExternalSecretsConfig` custom resource.

1.  Edit the `ExternalSecretsConfig` CR by running the following command:

    ``` terminal
    $ oc edit externalsecretsconfigs.operator.openshift.io cluster
    ```

2.  Add the `annotations` field under `spec.controllerConfig` as follows:

    ``` yaml
    apiVersion: operator.openshift.io/v1alpha1
    kind: ExternalSecretsConfig
    metadata:
      name: cluster
    spec:
      controllerConfig:
        annotations:
          prometheus.io/scrape: "true"
          example.com/environment: "production"
    ```

<!-- -->

1.  Verify that annotations are applied to the external-secrets deployment by running the following command:

    ``` terminal
    $ oc get deployment external-secrets -n external-secrets -o jsonpath='{.metadata.annotations}' | jq .
    ```

    The output should include the custom annotations you specified.

2.  Verify that annotations are applied to the pod template by running the following command:

    ``` terminal
    $ oc get deployment external-secrets -n external-secrets -o jsonpath='{.spec.template.metadata.annotations}' | jq .
    ```

    The output should include the custom annotations you specified.

3.  Verify that annotations are applied to other managed resources such as Services by running the following command:

    ``` terminal
    $ oc get service external-secrets-webhook -n external-secrets -o jsonpath='{.metadata.annotations}' | jq .
    ```

    The output should include the custom annotations you specified.

# Configuring the revisionHistoryLimit for external-secrets components

Configure the number of old `ReplicaSet` objects retained for rollback by setting the `revisionHistoryLimit` parameter for `external-secrets` components.

The following components can be configured:

| Component name                  | Description                                 |
|---------------------------------|---------------------------------------------|
| `ExternalSecretsCoreController` | The main `external-secrets` controller.     |
| `Webhook`                       | The `external-secrets` webhook server.      |
| `CertController`                | The certificate controller for webhook TLS. |
| `BitwardenSDKServer`            | The Bitwarden SDK server plugin.            |

Each component can only have one configuration entry. A maximum of 4 component configuration entries are allowed, one per component.

- You have access to the cluster with `cluster-admin` privileges.

- You have created the `ExternalSecretsConfig` custom resource.

1.  Edit the `ExternalSecretsConfig` CR by running the following command:

    ``` terminal
    $ oc edit externalsecretsconfigs.operator.openshift.io cluster
    ```

2.  Add the `componentConfigs` field under `spec.controllerConfig` as follows:

    ``` yaml
    apiVersion: operator.openshift.io/v1alpha1
    kind: ExternalSecretsConfig
    metadata:
      name: cluster
    spec:
      controllerConfig:
        componentConfigs:
          - componentName: ExternalSecretsCoreController
            deploymentConfigs:
              revisionHistoryLimit: 5
          - componentName: Webhook
            deploymentConfigs:
              revisionHistoryLimit: 3
    ```

    where

    `spec.controllerConfig.componentConfigs.componentName.deploymentConfigs.revisionHistoryLimit`
    Specifies the number of old `ReplicaSet` objects to retain for rollback. The value must be at least 1 to ensure rollback capability. The maximum value is 50. If not specified, the default is 10.

- Verify that the `revisionHistoryLimit` parameter is applied to the deployment by running the following command:

  ``` terminal
  $ oc get deployment external-secrets -n external-secrets -o jsonpath='{.spec.revisionHistoryLimit}'
  ```

  The output should display the value you configured.

# Setting custom environment variables for external-secrets components

To configure component behavior at runtime or integrate with external services, set custom environment variables for individual `external-secrets` components.

Custom environment variables are merged with the default environment variables set by the Operator. User-specified variables take precedence in case of conflicts with the Operator defaults. A maximum of 50 custom environment variables can be specified per component.

The environment variable names starting with the following prefixes are reserved:

- `HOSTNAME`

- `KUBERNETES_`

- `EXTERNAL_SECRETS_`

<!-- -->

- You have access to the cluster with `cluster-admin` privileges.

- You have created the `ExternalSecretsConfig` custom resource.

1.  Edit the `ExternalSecretsConfig` CR by running the following command:

    ``` terminal
    $ oc edit externalsecretsconfigs.operator.openshift.io cluster
    ```

2.  Add the `overrideEnv` field under the desired component in the `spec.controllerConfig.componentConfigs` stanza as follows:

    ``` yaml
    apiVersion: operator.openshift.io/v1alpha1
    kind: ExternalSecretsConfig
    metadata:
      name: cluster
    spec:
      controllerConfig:
        componentConfigs:
          - componentName: ExternalSecretsCoreController
            overrideEnv:
              - name: Example
                value: "4"
    ```

    where

    `spec.controllerConfig.componentConfigs.overrideEnv.name`
    Specifies the name of the environment variable. Environment variable names starting with `HOSTNAME`, `KUBERNETES_`, or `EXTERNAL_SECRETS_` are reserved and are not allowed.

    `spec.controllerConfig.componentConfigs.overrideEnv.value`
    Specifies the value of the environment variable.

- Verify that the environment variable is set on the deployment by running the following command:

  ``` terminal
  $ oc set env deployment/external-secrets -n external-secrets --list
  ```

  The output should include the custom environment variable you specified.
